Finished Fronend Implementation & Added Makefile